<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_newProject"
        android:orderInCategory="100"
        android:onClick="onClickNewProject"
        android:title="@string/menu_newProject"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:onClick="onClickSave"
        android:title="@string/menu_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_load"
        android:orderInCategory="100"
        android:onClick="onClickLoad"
        android:title="@string/menu_load"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_changeTemp"
        android:orderInCategory="100"
        android:onClick="onClickChangeTemp"
        android:title="@string/menu_changeTemp"
        app:showAsAction="never"/>
</menu>